--- a/css/style.css
+++ b/css/style.css
@@ -23,12 +23,30 @@ background-size: cover;
     height: 85%;
     width: 30%;
     text-align: right;
+    /*add for animation*/
+    position: relative;
+    left: -50rem;
+    animation: slide-from-left 3.5s ease-in-out forwards;
 }
+
+@keyframes slide-from-left{
+    80%{left: 1.5rem;}
+    100%{left: 0;}
+}
+
+
 
 .movie-poster{
     height: 100%;
     border-radius: 5px;
     margin-right: 2rem;
+    transition: all 1s;
+    cursor: pointer;
+}
+/*add hover effect*/
+.movie-poster:hover{
+    transform: scale(1.1);
+    box-shadow: 8px 8px 8px -4px black;
 }
 
 .movie-info-container{
@@ -37,10 +55,28 @@ background-size: cover;
     color: #fff;
     padding-top: 2rem;
 }
+.movie-info-container >*:not(.movie-info-title){
+    opacity: 0;
+    /* for animation*/
+    animation: fade-in 3.5s ease-in-out forwards;
+    animation-delay: 1s;
+}
+
+@keyframes fade-in{
+    100%{opacity: 1;}
+}
 
 .movie-info-title{
     text-transform: capitalize;
     margin-top: 2rem;
+    /* add for animation */
+    transform: translateY(-150px);
+    animation: slide-from-top 3.5s ease-in-out forwards;
+}
+
+@keyframes slide-from-top{
+    80%{transform: translateY(20px);}
+    100%{transform: translateY(0);}
 }
 
 .movie-genres{
